--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -11,7 +11,7 @@ lessons:
     weeknum: 1
     date: "September 7th"
     reading: "QSS 2.1-2.4"
-    assignment: "01-problem-set"
+    assignment: ""
     week: "01-rand-exp"
 
   - title: "Causality: Observational Studies"
