--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,3 +14,6 @@ main:
   - name: Gradescope
     url: https://www.gradescope.com/courses/158258
     weight: 6
+  - name: Slack
+    url: https://gov-51-f20-qd2.slack.com/
+    weight: 7
