ps0 and instructions

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -5,7 +5,7 @@ lessons:
     date: "September 2nd"
     week: "00-week"
     reading: "QSS 1.1-1.4"
-    assignment: ""
+    assignment: "ps0-turnout"
 
   - title: "Causality: Randomized Experiments"
     weeknum: 1
