--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -19,6 +19,7 @@ lessons:
     date: "September 14th"
     reading: "QSS 2.5-2.6"
     assignment: ""
+    week: "02-observational"
 
   - title: "Measurement: Descriptive Statistics"
     weeknum: 3
