--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -31,6 +31,7 @@ lessons:
     reading: "QSS 3.1-3.3"
     assignment: ""
     tutorial: "QSS Tutorial 3"
+    week: "03-visualization"
 
   - title: "Measurement: Sampling & Bivariate Statistics"
     weeknum: 4
