--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://gov51.co/
+baseurl: https://gov51.mattblackwell.org/
 defaultContentLanguage: en
 title: "Data Analysis and Politics"
 theme: hugo-academic
