--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -127,7 +127,7 @@ school:
 sharing_image: "social-image.png"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter: "kjhealy"
+twitter: "matt_blackwell"
 
 
 ############################
