--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -56,6 +56,7 @@ lessons:
     reading: "QSS 4.2.4-4.2.6"
     assignment: "ps2-judges-tidy"
     assignment_label: "PS 2 (Tidy)"
+    week: "06-regression-ii"
 
   - title: "Prediction: Interactions & Nonlinearities"
     weeknum: 7
