--- a/config.yaml
+++ b/config.yaml
@@ -66,5 +66,6 @@ ignoreFiles:
   - .ipynb_checkpoints$
   - \.Rmd$
   - \.Rmarkdown$
-  - _files$
   - _cache$
+  - "\\.knit\\.md$"
+  - "\\.utf8\\.md$"
