week 7 + slides reorg

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -62,7 +62,7 @@ lessons:
     weeknum: 7
     date: 2020-10-19
     reading: "QSS 4.3"
-    assignment: ""
+    assignment: "exam-01"
     assignment_label: "Exam 1"
     tutorial: "QSS Tutorial 6"
 
