--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -65,6 +65,7 @@ lessons:
     assignment: "exam-01"
     assignment_label: "Exam 1"
     tutorial: "QSS Tutorial 6"
+    week: "07-regression-iii"
 
     
 
