--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -79,7 +79,7 @@ lessons:
     weeknum: 9
     date: 2020-11-02
     reading: "QSS 6.3-6.4"
-    assignment: ""
+    assignment: "ps3-pres2016"
     assignment_label: "PS 3"
     tutorial: "QSS Tutorial 8"
     week: "09-random-variables"
