--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -104,7 +104,7 @@ lessons:
     weeknum: 12
     date: 2020-11-23
     reading: "QSS 7.3"
-    assignment: ""
+    assignment: "ps4-inequality-exposure"
     assignment_label: "PS 4"
 
   - title: "Review and Wrap-up"
