--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -118,5 +118,5 @@ lessons:
     weeknum: --
     date: 2020-12-07
     reading: " "
-    assignment: ""
+    assignment: "exam-02"
     assignment_label: "Exam 2"
